# vr.runners

./: .gitignore  .hgtags  .travis.yml  CHANGES.rst  README.rst  README.txt  setup.cfg  setup.py
docs/: conf.py  index.rst
tests/: conftest.py  test_image.py
vr/runners/: base.py  image.py  precise.py
vr/runners/templates/: image.lxc
