[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE
name = vr.runners
author = Brent Tubbs
author_email = brent.tubbs@gmail.com
description = Command line tools to launch procs
long_description = file:README.rst
url = https://github.com/yougov/vr.runners
classifiers =
	Development Status :: 5 - Production/Stable
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3

[options]
packages = find:
include_package_data = true
python_requires = >=2.7
install_requires =
	vr.common>=6
	requests>=1.2.0
	path.py
setup_requires = setuptools_scm >= 1.15.0

[options.extras_require]
testing =
	# upstream
	pytest >= 3.5, !=3.7.3
	pytest-checkdocs
	pytest-flake8

	# local
	backports.unittest_mock

docs =
	# upstream
	sphinx
	jaraco.packaging >= 3.2
	rst.linker >= 1.9

	# local

[options.entry_points]
console_scripts =
	vrun = vr.runners.image:ImageRunner.invoke
